build: update mvn dependencies
Update dependency versions: junit (5.13.4), assertj-core
(3.27.3), maven plugins for better (JDK) compatibility and newer features.
Update Maven compiler and surefire plugin configurations for JDK 21 compatibility.

Signed-off-by: Peter Boden <peter.boden@team.blue>